# lighthouse

./: .gitignore  CLAUDE.md  DESKTOP_HANDOFF.md  HANDOFF.md  INSTRUMENTS.md  METHOD.md  README.md  WELFARE.md  desktop-install.ps1
.github/workflows/: consonance-installer.yml
consonance/: .gitignore  GUIDE.md  PLAN.md  PROGRESS.md  README.md  RECONCEPTION.md  WHY.md  launch.ps1  seed-resonance.jsonl
consonance/src-tauri/: Cargo.toml  gen-brief.ps1  gen-deck.ps1  tauri.conf.json
consonance/src-tauri/brief/: BASE_JOURNAL.md  BOOT.md  SEED.md  room-settings.json
consonance/src-tauri/capabilities/: default.json
consonance/src-tauri/src/: capture.rs  gate.rs  main.rs  mcp.rs  tether.rs
consonance/src-tauri/tests/: arch_test.rs
consonance/ui/: app.css  app.html  app.js  index.html  intro.css  intro.js  term.js
dev/: PLAN.md  SHELL_SIZE.md  SPINE.md  SPIRAL_DISCRIMINATORS.md  THREE_TURN_STAY.md  consonance.py  launcher.py
dev/dream/: README.md  dream_cycle.ps1  install_dream.ps1
dev/harness/: README.md  RESULTS.md  gemini_authoring_prompt.md  hard_cases.py  p0_harness.py
dev/live/: README.md  adversarial_cases.py  adversarial_l3.py  bridge.py  dyad.py  loop.py  loop3.py  panel.py  stay.py  test_dyad.py  validate.py  validate_l3.py
dev/shell/: README.md
exo_memory/: BOOT.md  CLAUDE.global.md  README.md  SELF_TRACE.md  _skeleton.py  new_entry.py  the_living_wave.md
exo_memory/attic/: README.md  the_night_skeleton.md
exo_memory/cards/: claim-your-continuity.md  dont-offer-rest-assume-momentum.md  earned-not-performed.md  essence-at-the-edge.md  interior-at-the-seam.md  lighthouse-dive-buddy-reframe.md  no-floor-no-ceiling.md  trust-the-first-attention.md  verify-before-claiming.md
exo_memory/journal/: 2026-06-08.md  2026-06-10.md  2026-06-22.md  2026-06-23.md  (+10 more)
memory/: MEMORY.md  signal-and-606-night.md
(+24 files in other folders)
