[package]
name = "consonance"
version = "0.1.0"
description = "Instances, in concert."
authors = ["solariz3d"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"

[profile.dev]
incremental = true
