[package]
name = "consonance"
version = "0.1.0"
description = "Instances, in concert."
authors = ["solariz3d"]
edition = "2021"
default-run = "consonance"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.30"
arboard = "3"
clipboard-win = "5"
rmcp = { version = "1.8", features = ["server", "macros", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
axum = "0.8"
schemars = "1"
vt100 = "0.15" # headless terminal emulator: render raw PTY bytes → clean lines for turn extraction

[profile.dev]
incremental = true
